UHF-8532: Changed the open map functionality to open the map in the same window and changed the skip links around the map to be available only when cookies are accepted.

--- a/src/scss/06_components/paragraphs/_map.scss
+++ b/src/scss/06_components/paragraphs/_map.scss
@@ -64,8 +64,8 @@ $-map-aspect-ratio-mobile: 1;
     align-items: center;
     bottom: -40px;
     display: inline-flex;
+    left: 0;
     position: absolute;
-    right: 0;
     text-decoration: underline;
   }
 }
