UHF-8532: Append the map iframe title to the link on unit maps

--- a/templates/module/helfi_tpr/field--service-map-embed.html.twig
+++ b/templates/module/helfi_tpr/field--service-map-embed.html.twig
@@ -38,4 +38,4 @@
   }
 } %}
 {{ drupal_settings }}
-{{ link(element[0]['link']['#value'], link_url, link_attributes) }}
+{{ link(iframe_attributes['title'] ~ ' - ' ~ element[0]['link']['#value'], link_url, link_attributes) }}
