UHF-8534: Fix hds leaking float property

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -12,6 +12,10 @@
     scroll-margin-top: $spacing-double;
   }
 
+  .hds-selection-group > .helfi-calculator__error-placeholder {
+    float: none;
+  }
+
   .hds-text-input__input {
     @include breakpoint($breakpoint-m) {
       width: auto;
