UHF-7116: Change other languages menu structure to use nested ul lists

--- a/templates/navigation/menu--external-header-language-links.html.twig
+++ b/templates/navigation/menu--external-header-language-links.html.twig
@@ -23,9 +23,9 @@
 
 {% macro link_render(item) %}
   {% if item.is_nolink %}
-    <div {{ item.attributes.addClass( "headerlanguagelinks__link headerlanguagelinks__link--nolink") }}>
+    <span {{ item.attributes.addClass( "headerlanguagelinks__link headerlanguagelinks__link--nolink") }}>
       {{item.title}}
-    </div>
+    </span>
   {% else %}
     {% set link_attributes = {
       'class': [
