UHF-7116: Change other languages menu structure to use nested ul lists

--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -31,6 +31,11 @@ $-otherlangs-min-width: 240px; // From design specs
   }
 }
 
+.headerlanguagelinks__group {
+  list-style-type: none;
+  padding-left: $spacing-half;
+}
+
 .headerlanguagelinks__group + .headerlanguagelinks__group {
   margin-top: $spacing-and-half;
 }
