--- a/templates/component/otherlanguages.twig
+++ b/templates/component/otherlanguages.twig
@@ -49,7 +49,7 @@
     {% embed "@hdbt/misc/nav-toggle-dropdown.twig" with {
       id: dropdown_id,
       modifier_class: 'nav-toggle-dropdown--otherlangs',
-      description: 'Information in other languages'|t({}, {'context': 'Other languages-navigation'}),
+      description: 'Information in other languages menu'|t({}, {'context': 'Other languages-navigation'}),
     } %}
       {% block content %}
         {{ content }}
