UHF-8006: Removed branding navigation styling and mentions from code

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -1,5 +1,5 @@
 @import 'menu';
-@import 'branding-navigation';
+@import 'header-branding';
 @import 'breadcrumb';
 @import 'header-bottom-navigation';
 @import 'header-search';
