UHF-8442: Add preliminary styling for the hearings paragraph

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -8,6 +8,7 @@
 @import 'content-liftup';
 @import 'district-and-project-search';
 @import 'event-list';
+@import 'hearings';
 @import 'hero';
 @import 'image';
 @import 'liftup-with-image';
