--- a/src/scss/06_components/forms/_react-forms.scss
+++ b/src/scss/06_components/forms/_react-forms.scss
@@ -119,3 +119,8 @@ button.hdbt-search__remove-selection-button:not(:disabled) {
   --color-hover-focus: var(--hdbt-color-black);
   --focus-outline-color: var(--hdbt-color-black);
 }
+
+// Remove margin from pill buttons
+[class*="button_hds-button__label"] ~ [class*="button_hds-icon"] {
+  margin: 0;
+}
