--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -13,6 +13,7 @@
 @import 'liftup-with-image';
 @import 'list-of-links';
 @import 'map';
+@import 'news-archive';
 @import 'news-list';
 @import 'phasing';
 @import 'popular-service-item';
