UHF-8737: attach js lib to template

--- a/templates/media/media--hel-map.html.twig
+++ b/templates/media/media--hel-map.html.twig
@@ -71,4 +71,6 @@
 {{ drupal_settings }}
 {{ attach_library(media.getJsLibrary()) }}
 
+{{ attach_library(media.getJsLibrary()) }}
+
 {{ link(iframe_title ~ ' - ' ~ link['#title'], link['#url'], link['#attributes']|merge({'class': 'map__external-link'})) }}
