UHF-8737: remove accordion preprocessing, added entity bundle classes

--- a/templates/paragraphs/paragraph--accordion-item.html.twig
+++ b/templates/paragraphs/paragraph--accordion-item.html.twig
@@ -38,6 +38,9 @@
  * @ingroup themeable
  */
 #}
+
+{% set accordion_item_heading_level = paragraph.getTitleHeadingLevel() %}
+
 {% block paragraph %}
   {% include '@hdbt/component/accordion.twig' with {
     heading_level: 'h' ~ accordion_item_heading_level,
