--- a/templates/paragraphs/paragraph--service-list.html.twig
+++ b/templates/paragraphs/paragraph--service-list.html.twig
@@ -1,3 +1,6 @@
+{% set search_parent_paragraph = paragraph.getId() %}
+{% set services_list = paragraph.getServicesList() %}
+
 {% block paragraph %}
   {% embed "@hdbt/misc/component.twig" with
     {
