UHF-8737: unit search paragraph bundle

--- a/templates/paragraphs/paragraph--service-list.html.twig
+++ b/templates/paragraphs/paragraph--service-list.html.twig
@@ -1,4 +1,4 @@
-{% set search_parent_paragraph = paragraph.getId() %}
+{% set search_parent_paragraph = paragraph.getSearchParentParagraph() %}
 {% set services_list = paragraph.getServicesList() %}
 
 {% block paragraph %}
