--- a/templates/paragraphs/paragraph--unit-search.html.twig
+++ b/templates/paragraphs/paragraph--unit-search.html.twig
@@ -1,3 +1,6 @@
+{% set search_parent_paragraph = paragraph.getSearchParentParagraph() %}
+{% set units_list = paragraph.getUnitsList() %}
+
 {% block paragraph %}
   {% embed "@hdbt/misc/component.twig" with
     {
