UHF-8737: created unit list search bundle class and cleaned preprocess

--- a/templates/paragraphs/paragraph--service-list-search.html.twig
+++ b/templates/paragraphs/paragraph--service-list-search.html.twig
@@ -1,3 +1,5 @@
+{% set services_list_views_argument = paragraph.getServicesListSearch() %}
+
 {% block paragraph %}
   {% embed "@hdbt/misc/component.twig" with
     {
