UHF-8737: created social_media_link entity class

--- a/templates/paragraphs/paragraph--social-media-link.html.twig
+++ b/templates/paragraphs/paragraph--social-media-link.html.twig
@@ -45,6 +45,8 @@
   ]
 %}
 
+{% set icon_name = paragraph.getIconName() %}
+
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
    {% set link_title %}
