UHF-8737: added phasing bundle classes

--- a/templates/paragraphs/paragraph--phasing.html.twig
+++ b/templates/paragraphs/paragraph--phasing.html.twig
@@ -1,3 +1,5 @@
+{% set phasing_title_level = paragraph.getHeadingLevel() %}
+
 {% block paragraph %}
   {% embed "@hdbt/misc/component.twig" with
     {
