--- a/templates/media/media--hel-map.html.twig
+++ b/templates/media/media--hel-map.html.twig
@@ -34,6 +34,9 @@
 {% set media_url = content.field_media_hel_map.0['#iframe']['#attributes']['src'] %}
 {% set media_attributes = media.field_media_hel_map %}
 {% set link = content.field_media_hel_map.0['#link'] %}
+{% set map_service_url = media.getServiceUrl() %}
+{% set privacy_policy_url = media.getPrivacyPolicyUrl() %}
+{% set iframe_title = media.getMediaTitle() %}
 
 {% set after_map_id = 'map-' ~ media_id ~ random() ~ '-after'|clean_id %}
 {% set before_map_id = 'map-' ~ media_id ~ random() ~ '-before'|clean_id %}
@@ -41,9 +44,9 @@
 {% include '@hdbt/misc/embedded-content-cookie-compliance.twig' with {
   media_url: media_url,
   media_id: media.id,
-  media_iframe_title: media.getIframeTitle(),
-  media_service_url: media.getServiceUrl(),
-  privacy_policy_url: media.getPrivacyPolicyUrl(),
+  media_iframe_title: iframe_title,
+  media_service_url: map_service_url,
+  privacy_policy_url: privacy_policy_url,
 } %}
 
 {% if alternative_language %}
@@ -66,7 +69,6 @@
   }
 } %}
 {{ drupal_settings }}
-
 {{ attach_library(media.getJsLibrary()) }}
 
 {{ link(iframe_title ~ ' - ' ~ link['#title'], link['#url'], link['#attributes']|merge({'class': 'map__external-link'})) }}
