PLATTA-4940 - flag button links for using helfi_link_twig

--- a/templates/navigation/link-button.html.twig
+++ b/templates/navigation/link-button.html.twig
@@ -51,7 +51,7 @@
 {% endif %}
 
 {% if icon == true %}
-  {% set link_options = link_options|merge({'data-selected-icon': icon_type}) %}
+  {% set link_options = link_options|merge({'data-selected-icon': icon_type, 'helfi_link': 'true'}) %}
 {% endif %}
 
 {% set title %}
