--- a/templates/content/node--hearing--teaser.html.twig
+++ b/templates/content/node--hearing--teaser.html.twig
@@ -23,28 +23,63 @@
   {% set card_unpublished_on = '-' %}
 {% endif %}
 
-{% embed '@hdbt/component/card.twig' with {
-  card_modifier_class: card_hearing_classes|join(' '),
-  card_title: label,
-  card_image: content.field_hearing_main_image,
-  card_url: content.field_url['0']['#url'].uri,
-  card_url_external: true,
-  card_metas: [
-    {
-      icon: 'clock',
-      label: 'Opened'|t({}, {'context': 'Label for hearing opened date'}),
-      content: card_published_on,
-    },
-    {
-      icon: 'clock',
-      label: 'Closes'|t({}, {'context': 'Label for hearing closes date'}),
-      content: card_unpublished_on,
-    },
-    {
-      icon: 'speechbubble-text',
-      label: 'Activity'|t({}, {'context': 'Label for hearing activity row'}),
-      content: card_hearing_comments,
-    },
-  ],
-} %}
-{% endembed %}
+{% if available_in_languages %}
+  {% embed '@hdbt/component/card.twig' with {
+    card_modifier_class: card_hearing_classes|join(' '),
+    card_title: label,
+    card_image: content.field_hearing_main_image,
+    card_url: content.field_url['0']['#url'].uri,
+    card_url_external: true,
+    card_metas: [
+      {
+        icon: 'clock',
+        label: 'Opened'|t({}, {'context': 'Label for hearing opened date'}),
+        content: card_published_on,
+      },
+      {
+        icon: 'clock',
+        label: 'Closes'|t({}, {'context': 'Label for hearing closes date'}),
+        content: card_unpublished_on,
+      },
+      {
+        icon: 'speechbubble-text',
+        label: 'Activity'|t({}, {'context': 'Label for hearing activity row'}),
+        content: card_hearing_comments,
+      },
+    ],
+    card_tags: [
+      {
+        tag: available_in_languages,
+        color: 'alert',
+      }
+    ],
+  } %}
+  {% endembed %}
+{% else %}
+  {% embed '@hdbt/component/card.twig' with {
+    card_modifier_class: card_hearing_classes|join(' '),
+    card_title: label,
+    card_image: content.field_hearing_main_image,
+    card_url: content.field_url['0']['#url'].uri,
+    card_url_external: true,
+    card_metas: [
+      {
+        icon: 'clock',
+        label: 'Opened'|t({}, {'context': 'Label for hearing opened date'}),
+        content: card_published_on,
+      },
+      {
+        icon: 'clock',
+        label: 'Closes'|t({}, {'context': 'Label for hearing closes date'}),
+        content: card_unpublished_on,
+      },
+      {
+        icon: 'speechbubble-text',
+        label: 'Activity'|t({}, {'context': 'Label for hearing activity row'}),
+        content: card_hearing_comments,
+      },
+    ]
+  } %}
+  {% endembed %}
+{% endif %}
+
